--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "NODE_ENV=test PORT=3011 mocha -r ts-node/register test/**/*.test.ts --exit",
     "test:watch": "nodemon -e ts --exec mocha -r ts-node/register test/**/*.test.ts"
   },
-  "author": "aroshaRJ",
+  "author": "nimali",
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.495.0",
