--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "project-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/server",
+  "main": "server.ts",
   "scripts": {
-    "start": "nodemon --exec ts-node src/server.ts -e ts",
+    "start": "nodemon --exec ts-node server.ts -e ts",
     "build": "tsc",
-    "start:prod": "node dist/server.js",
+    "start:prod": "node server.ts",
     "seed": "ts-node src/seed/seed-runner",
     "test": "NODE_ENV=test PORT=3011 mocha -r ts-node/register test/**/*.test.ts --exit",
     "test:watch": "nodemon -e ts --exec mocha -r ts-node/register test/**/*.test.ts"
