--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "strict": true,
       "esModuleInterop": true
     },
-    "include": ["src/**/*.ts"],
+    "include": ["src/**/*.ts", "server.ts", "global.d.ts", "config.ts"],
     "exclude": ["node_modules"]
   }
   
